# ctf-sbseg2024

./: .gitmodules  README.md  anexos.py
aesintegro/: README.md
aesintegro/public/: crypto_signature.py  sample
brop/: README.md
brop/public/: run
dica/: README.md
dosservice/: README.md
duck_image/: README.md
duck_image/private/solver/: Makefile  README.md  enc.decompyled.py  pyproject.toml  solver.py
esoteric/: README.md
esoteric/public/: Dockerfile  esoteric  run
fax/: README.md
fax/public/: fax.flac
flagchecker/: README.md
flagchecker/public/: flagchecker
fmtstr/: README.md
fmtstr/public/: run
gottagofast/: README.md
gottagofast/private/: idea.txt
gottagofast/public/: Dockerfile  go.mod  go.sum
hill_server/: README.md
iceblox/: README.md
iceblox/public/: iceblox.html
integridade/: README.md
integridade/public/: Dockerfile  flag.txt  package-lock.json  package.json
itstime/: README.md
itstime/public/: server.js
log/: README.md
log/public/: server.js
pilha/: README.md
pilha/public/: package-lock.json  package.json  server.js
qdor/: README.md
qdor/public/: package-lock.json  server.js
ransomware/: README.md
ransomware/public/: perfil.png.enc  ransomware.py
rvrop/: README.md
rvrop/public/: Dockerfile  (+1 more)
seized_photos/: README.md
shcodeme/: README.md
sqli/: README.md
ssrf/: README.md
stackoverflow/: README.md
timekeeperslock2/: README.md
timekeeperslock2/private/server/: Cargo.toml  Dockerfile  Rocket.toml
timekeeperslock2/private/server/src/: main.rs
ttp/: README.md
uaf/: README.md
(+172 files in other folders)
