[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
constant_time_eq = "0.3.0"
hex = "0.4.3"
rocket = "0.5.1"
sha3 = { version = "0.10.8", features = ["asm"] }
